add basic authentication and User model
